--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "encrypted-box",
-  "version": "1.0.33",
+  "version": "1.1.01",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@jaspero/ng-confirmations": "^0.4.7",
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "classlist.js": "^1.1.20150312",
@@ -30,7 +31,6 @@
     "ngx-ui-loader": "^7.2.2",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
-   
     "ts-md5": "^1.2.4",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
