--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "encrypted-box",
-  "version": "1.1.01",
+  "version": "1.1.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,6 +26,7 @@
     "blockstack": "^19.3.0",
     "bootstrap": "^4.3.1",
     "classlist.js": "^1.1.20150312",
+    "generate-password-browser": "^1.0.3",
     "jquery": "^3.4.1",
     "ngx-toastr": "^10.0.4",
     "ngx-ui-loader": "^7.2.2",
